order and upload file
