# api/router.go
@@ -42,17 +42,18 @@ func NewApi(r *gin.Engine, cfg *config.Config, storage storage.IStorage, logger 
 	v1.PUT("/category/:id", h.UpdateCategory)
 	v1.DELETE("/deletecategory", h.DeleteCustomer)
 
-	v1.POST("/createorder", h.CreateOrder)
-	v1.GET("/getbyidorder/:id", h.GetOrderByID)
+	v1.POST("/order", h.CreateOrder)
+	// v1.GET("/getbyidorder/:id", h.GetOrderByID)
 	v1.GET("/getallorders", h.GetAllOrders)
-	v1.PUT("/updateorder", h.UpdateOrder)
-	v1.DELETE("/deleteorder/:id", h.DeleteOrder)
+	// v1.PUT("/updateorder", h.UpdateOrder)
+	// v1.DELETE("/deleteorder/:id", h.DeleteOrder)
+	// r.PATCH("/changeorderstatus", h.ChangeStatus)
 
-	v1.POST("createorderitem", h.CreateOrderItem)
-	v1.GET("/getbyorderitem/:id", h.GetOrderItemByID)
-	v1.GET("/getallorderitems", h.GetAllOrderItems)
-	v1.PUT("/updateorderitem", h.UpdateOrderItem)
-	v1.DELETE("deleteorderitem", h.DeleteOrderItem)
+	// v1.POST("createorderitem", h.CreateOrderItem)
+	// v1.GET("/getbyorderitem/:id", h.GetOrderItemByID)
+	// v1.GET("/getallorderitems", h.GetAllOrderItems)
+	// v1.PUT("/updateorderitem", h.UpdateOrderItem)
+	// v1.DELETE("deleteorderitem", h.DeleteOrderItem)
 
 	v1.POST("/createuser", h.CreateUser)
 	v1.GET("/getbyiduser/:id", h.GetUserByID)
